--- a/index.html
+++ b/index.html
@@ -1,56 +1,1 @@
-<!doctype html>
-<html>
-
-<head>
-
-<meta charset="UTF-8">
-<title>Untitled Document</title>
-<!-- LayerSlider stylesheet -->
-<link rel="stylesheet" href="layerslider/css/layerslider.css" type="text/css">
-
-</head>
-
-
-<body>
-<h1>SLIDE PROJECT</h1>
-<p>welcome to  pomeranians&nbsp;Slide</p>
-<div id="layerslider" style="width: 800px; height: 400px;">
-	<!-- First slide -->
-    <div class="ls-slide" data-ls="duration: 4000;">
-        <!-- Slide background image of the first slide -->
-        <img src="http://images.mentalfloss.com/sites/default/files/istock_000005532815_small.jpg?resize=1100x740" class="ls-bg" alt="Slide background">
- </div>
- 
- <!-- Second slide -->
-	 <div class="ls-slide" data-ls="duration: 4000;">
-
- <img src="http://cdn3-www.dogtime.com/assets/uploads/gallery/pomeranian-dog-breed-pictures/1-layingforward.jpg" class="ls-bg" alt="Slide background">
-    </div>
-</div>
-	
- 
-<!-- External libraries: jQuery & GreenSock -->
-<script src="layerslider/js/jquery.js" type="text/javascript"></script>
-<script src="layerslider/js/greensock.js" type="text/javascript"></script>
-<!-- LayerSlider script files -->
-<script src="layerslider/js/layerslider.transitions.js" type="text/javascript"></script>
-<script src="layerslider/js/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
-
-<script type="text/javascript">
- 
-    // Running the code when the document is ready
-    $(document).ready(function(){
- 
-        // Calling LayerSlider on the target element
-        $('#layerslider').layerSlider({
- 
-            // Slider options will be added here
-            // later in this guide.
-        });
-    });
- 
-</script>
-
-
-</body>
-</html>
+hello stalker (: there is nothing here. 
